--- a/HTML-復習/index.html
+++ b/HTML-復習/index.html
@@ -10,18 +10,20 @@
     <p><img src="image/logo.png" alt="とり"></p>
 
 <ul>
-    <li>ホーム</li>
-    <li>お知らせ</li>
-    <li>製品情報</li>
-    <li>サービス</li>
-    <li>会社概要</li>
-    <li>お問い合わせ</li>
+    <li><a href="index.html">ホーム</a></li>
+    <li><a href="index.html">お知らせ</a></li>
+    <li><a href="index.html">製品情報</a></li>
+    <li><a href="index.html">サービス</a></li>
+    <li><a href="index.html">会社概要</a></li>
+    <li><a href="index.html">お問い合わせ</a></li>
 </ul>
 
 <p><img src="image/mainvisual.jpg" alt="おおとり"></p>
 
-<h2>サンプルだからこその“カタチ”がある</h2>
-わかりやすいサンプルはどうあるべきなのか？その答えを
+<h2>サンプルだからこその““カタチ”がある</h2>
+わかりやすいサンプルはどうあるべきなのか？その<a href="index.html">答え</a>を知っているかどうかで<a href="index.html">サンプルの出来栄え</a>は決まってきます。
+これはサンプルのテキストです。これはサンプルのテキストです。これはサンプルのテキストです。これはサンプルのテキストです。これはサンプルのテキストです。
+<p>これはサンプルのテキストです。これはサンプルのテキストです。これはサンプルのテキストです。これはサンプルのテキストです。これはサンプルのテキストです。</p>
 
 
 <h2>最高のサンプルを驚きのプライスで！</h2>
